Configurando a aplicação para receber Grunt.

--- a/README
+++ b/README
@@ -1,10 +1,23 @@
-quero.me - quero.gdb@gmail.com
------------------------------------------------
-Get what you want
+quero.me
+========
 
-Authors::
---
-Fernando Freitas Alves - ffreitasalves@gmail.com
-Thuany Serpa - thuanyserpa@gmail.com
-Caio Tarifa Valente - caiotarifa@gmail.com
-Yuri Martins - contato.yurimartins@gmail.com
+O que é?
+--------
+
+Descrição...
+
+Autores
+-------
+Caio Tarifa Valente (caiotarifa@gmail.com)
+Fernando Freitas Alves (ffreitasalves@gmail.com)
+Thuany Serpa (thuanyserpa@gmail.com)
+Yuri Martins (contato.yurimartins@gmail.com)
+
+Tecnologias Utilizadas
+----------------------
+
+* App Engine (appengine.google.com)
+* Python (www.python.org)
+* Grunt (gruntjs.com)
+* Bower (bower.io)
+* Semantic UI (semantic-ui.com)
